--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ permalink: /
 title: "Círclo Celeste - Tarot, rituales y seminarios"
 header:
   overlay_image: https://images.unsplash.com/photo-1600430086946-2d9fc61bbefc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80
-  overlay_filter: rgba(RGBA(37,0,72,0.8)
+  overlay_filter: rgba(19, 0, 103, 0.8)
   cta_label: "<i class='fa fa-envelope'></i> Recibe el boletin"
   cta_url: "https://circuloceleste.substack.com/"
   caption:
