--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 ---
 layout: splash
 permalink: /
-title: "Círclo Celeste - Tarot, rituales y seminarios"
+title: "Círclo Celeste - Tarot para todos"
 header:
   overlay_image: https://images.unsplash.com/photo-1600430086946-2d9fc61bbefc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80
-  overlay_filter: rgba(19, 0, 103, 0.8)
+  overlay_filter: rgba(19, 0, 103, 0.6)
   cta_label: "<i class='fa fa-envelope'></i> Recibe el boletin"
   cta_url: "https://circuloceleste.substack.com/"
+  cta_label: "<i class='fa fa-envelope'></i> Escuela de Tarot"
+  cta_url: "/escuela-de-tarot/"
+
   caption:
 excerpt: 'Soluciones para los problemas espirituales. Tarot terapéutico, rituales para descubrir y mantener tu enfoque. Cursos y seminarios para encontrar tu caminio y progresar en la vida.<br /> '
 feature_row:
@@ -31,7 +34,7 @@ feature_row:
 github:
   - excerpt: '{::nomarkdown}<iframe style="display: inline-block;" src="https://ghbtns.com/github-btn.html?user=mmistakes&repo=minimal-mistakes&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe> <iframe style="display: inline-block;" src="https://ghbtns.com/github-btn.html?user=mmistakes&repo=minimal-mistakes&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>{:/nomarkdown}'
 intro:
-  - excerpt: 'Síguenos en Twitter &nbsp; [<i class="fa fa-twitter"></i>@circuloceleste](https://twitter.com/circuloceleste){: .btn .btn--twitter}'
+  - excerpt: 'En Círculo Celeste ofrecemos lecturas terapéutas, rituales para ayudarte a alcanzar tus metas y otras herramientas para ayudarte a encontrar respuestas espirituales. Obten información sobre nuestros cursos y seminarios. Síguenos en Twitter &nbsp; [<i class="fa fa-twitter"></i>@circuloceleste](https://twitter.com/circuloceleste){: .btn .btn--twitter}'
 ---
 
 {% include feature_row id="intro" type="center" %}
