--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@ title: "Círclo Celeste - Tarot para todos"
 header:
   overlay_image: https://images.unsplash.com/photo-1600430086946-2d9fc61bbefc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80
   overlay_filter: rgba(19, 0, 103, 0.6)
-  cta_label: "<i class='fa fa-envelope'></i> Recibe el boletin"
-  cta_url: "https://circuloceleste.substack.com/"
-  cta_label: "<i class='fa fa-envelope'></i> Escuela de Tarot"
-  cta_url: "/escuela-de-tarot/"
+
+actions
+  -label: "Recibe el boletin"
+  url: "https://circuloceleste.substack.com/"
+
+  -label: "Escuela de Tarot"
+  url: "/escuela-de-tarot/"
 
   caption:
 excerpt: 'Soluciones para los problemas espirituales. Tarot terapéutico, rituales para descubrir y mantener tu enfoque. Cursos y seminarios para encontrar tu caminio y progresar en la vida.<br /> '
@@ -16,21 +19,21 @@ feature_row:
   - image_path: https://images.unsplash.com/photo-1600429991827-5224817554f8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
     alt: "customizable"
     title: "Significado de las cartas"
-    excerpt: "Descubre el significado de las cartas del Tarot"
-    url: "/docs/configuration/"
-    btn_label: "Saber más"
+    excerpt: "Aprende sobre el Tarot. Descubre el significado de las cartas del Tarot"
+    url: "/significado-cartas-de-tarot/"
+    btn_label: "Aprende sobre las cartas"
   - image_path: https://images.unsplash.com/photo-1516633886686-2a2ffb459273?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
     alt: "Cartas de Tarot"
     title: "Tienda Holistica"
     excerpt: "Encuentra cartas de Tarot, amuletos y artículos para rituales."
-    url: "/docs/layouts/"
-    btn_label: "Ver la tienda"
+    url: "/tienda/"
+    btn_label: "Visita la Tienda"
   - image_path: https://images.unsplash.com/photo-1550177977-ad69e8f3cae0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
     alt: "Asistentes a una clase de Tarot"
     title: "Cursos y Seminarios"
     excerpt: "Cursos, talleres y seminarios para ayudarte a alcanzar las metas propuestas."
-    url: "/docs/license/"
-    btn_label: "Learn More"
+    url: "/escuela-de-tarot/"
+    btn_label: "Escuela de Tarot"
 github:
   - excerpt: '{::nomarkdown}<iframe style="display: inline-block;" src="https://ghbtns.com/github-btn.html?user=mmistakes&repo=minimal-mistakes&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe> <iframe style="display: inline-block;" src="https://ghbtns.com/github-btn.html?user=mmistakes&repo=minimal-mistakes&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>{:/nomarkdown}'
 intro:
