cambios revertidos indice. Boton del boletin

--- a/index.html
+++ b/index.html
@@ -6,12 +6,9 @@ header:
   overlay_image: https://images.unsplash.com/photo-1600430086946-2d9fc61bbefc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80
   overlay_filter: rgba(19, 0, 103, 0.6)
 
-actions
-  -label: "Recibe el boletin"
-  url: "https://circuloceleste.substack.com/"
+  cta_label: "<i class='fa fa-envelope'></i> Regístrate en Círculo Celeste"
+  cta_url: "https://circuloceleste.substack.com/"
 
-  -label: "Escuela de Tarot"
-  url: "/escuela-de-tarot/"
 
   caption:
 excerpt: 'Soluciones para los problemas espirituales. Tarot terapéutico, rituales para descubrir y mantener tu enfoque. Cursos y seminarios para encontrar tu caminio y progresar en la vida.<br /> '
