--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 layout: splash
 permalink: /
 title: "Círclo Celeste - Tarot, rituales y seminarios"
+excerpt: 'Soluciones para los problemas espirituales. Tarot terapéutico, rituales para descubrir y mantener tu enfoque. Cursos y seminarios para encontrar tu caminio y progresar en la vida.<br /> '
+
 header:
   overlay_image: https://images.unsplash.com/photo-1600430086946-2d9fc61bbefc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80
   overlay_filter: rgba(19, 0, 103, 0.8)
   cta_label: "<i class='fa fa-envelope'></i> Recibe el boletin"
   cta_url: "https://circuloceleste.substack.com/"
-  caption:
-  excerpt: 'Soluciones para los problemas espirituales. Tarot terapéutico, rituales para descubrir y mantener tu enfoque. Cursos y seminarios para encontrar tu caminio y progresar en la vida.<br /> '
+
 feature_row:
   - image_path: https://images.unsplash.com/photo-1600429991827-5224817554f8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
     alt: "customizable"
@@ -31,7 +32,7 @@ feature_row:
 github:
   - excerpt: '{::nomarkdown}<iframe style="display: inline-block;" src="https://ghbtns.com/github-btn.html?user=mmistakes&repo=minimal-mistakes&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe> <iframe style="display: inline-block;" src="https://ghbtns.com/github-btn.html?user=mmistakes&repo=minimal-mistakes&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>{:/nomarkdown}'
 intro:
-  - excerpt: 'Síguenos en Twitter &nbsp; [<i class="fa fa-twitter"></i>@circuloceleste](https://twitter.com/circuloceleste){: .btn .btn--twitter}'
+  - excerpt: '<h2>Tarot para explicar las situaciones, identificar problemas y encontrar respuestas. Creemos que el Tarot puede ayudarte a organizar tus ideas. Usa las cartas como herramienta de autoayuda y una guia para encontrar caminios alternativos.</h2>'
 ---
 {% include feature_row id="intro" type="center" %}
 {% include feature_row %}
