--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: splash
+layout: home
 permalink: /
 title: "Círclo Celeste - Tarot, rituales y seminarios"
 excerpt: 'Soluciones para los problemas espirituales. Tarot terapéutico, rituales para descubrir y mantener tu enfoque. Cursos y seminarios para encontrar tu caminio y progresar en la vida.<br /> '
