--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: home
+layout: featured
 permalink: /
 title: "Círclo Celeste - Tarot, rituales y seminarios"
 excerpt: 'Soluciones para los problemas espirituales. Tarot terapéutico, rituales para descubrir y mantener tu enfoque. Cursos y seminarios para encontrar tu caminio y progresar en la vida.<br /> '
@@ -29,8 +29,6 @@ feature_row:
     excerpt: "Cursos, talleres y seminarios para ayudarte a alcanzar las metas propuestas."
     url: "/escuela-de-tarot/"
     btn_label: "Escuela de Tarot"
-intro:
-  - excerpt: '<h2>Tarot para explicar las situaciones, identificar problemas y encontrar respuestas. Creemos que el Tarot puede ayudarte a organizar tus ideas. Usa las cartas como herramienta de autoayuda y una guia para encontrar caminios alternativos.</h2>'
 ---
 {% include feature_row id="intro" type="center" %}
 {% include feature_row %}
