--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ feature_row:
     btn_label: "Escuela de Tarot"
 
 intro:
-  - excerpt: '<h2>Tarot para explicar las situaciones, identificar problemas y encontrar respuestas. Creemos que el Tarot puede ayudarte a organizar tus ideas. Usa las cartas como herramienta de autoayuda y una guia para encontrar caminios alternativos.</h2>'
+  - excerpt: 'Tarot para explicar las situaciones, identificar problemas y encontrar respuestas. Creemos que el Tarot puede ayudarte a organizar tus ideas. Usa las cartas como herramienta de autoayuda y una guia para encontrar caminios alternativos.'
 ---
 {% include feature_row id="intro" type="center" %}
 {% include feature_row %}
