--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: splash
 permalink: /
 title: "Círclo Celeste - Tarot, rituales y seminarios"
-excerpt: 'Soluciones para los problemas espirituales. Tarot terapéutico, rituales para descubrir y mantener tu enfoque. Cursos y seminarios para encontrar tu caminio y progresar en la vida.<br /> '
+excerpt: 'Soluciones para los problemas espirituales. Tarot terapéutico, rituales para descubrir y mantener tu enfoque. Cursos y seminarios para encontrar tu caminio y progresar en la vida. '
 
 header:
   overlay_image: https://images.unsplash.com/photo-1600430086946-2d9fc61bbefc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80
@@ -30,12 +30,33 @@ feature_row:
     url: "/escuela-de-tarot/"
     btn_label: "Escuela de Tarot"
 
+feature_row2:
+- image_path: https://images.unsplash.com/photo-1600429991827-5224817554f8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
+  alt: "customizable"
+  title: "Significado de las cartas"
+  excerpt: "Desarrolla tu talento natural. Descubre el significado de las cartas del Tarot."
+  url: "/significado-de-las-cartas-del-tarot/"
+  btn_label: "Saber más"
+- image_path: https://images.unsplash.com/photo-1516633886686-2a2ffb459273?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
+  alt: "Cartas de Tarot"
+  title: "Tienda Holistica"
+  excerpt: "Encuentra cartas de Tarot, amuletos y artículos para rituales."
+  url: "/tienda-de-magia/"
+  btn_label: "Tienda de Magia"
+- image_path: https://images.unsplash.com/photo-1550177977-ad69e8f3cae0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
+  alt: "Asistentes a una clase de Tarot"
+  title: "Cursos y Seminarios"
+  excerpt: "Cursos, talleres y seminarios para ayudarte a alcanzar las metas propuestas."
+  url: "/escuela-de-tarot/"
+  btn_label: "Escuela de Tarot"
+
 
 intro:
   - excerpt: 'Tarot para explicar las situaciones, identificar problemas y encontrar respuestas. Creemos que el Tarot puede ayudarte a organizar tus ideas. Usa las cartas como herramienta de autoayuda y una guia para encontrar caminios alternativos.'
 
-  
+
 
 ---
 {% include feature_row id="intro" type="center" %}
 {% include feature_row %}
+{% include feature_row id="feature_row2" type="center" %}
