--- a/index.html
+++ b/index.html
@@ -29,6 +29,30 @@ feature_row:
     excerpt: "Cursos, talleres y seminarios para ayudarte a alcanzar las metas propuestas."
     url: "/escuela-de-tarot/"
     btn_label: "Escuela de Tarot"
+    feature_row2:
+      - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
+        alt: "placeholder image 2"
+        title: "Placeholder Image Left Aligned"
+        excerpt: 'This is some sample content that goes here with **Markdown** formatting. Left aligned with `type="left"`'
+        url: "#test-link"
+        btn_label: "Read More"
+        btn_class: "btn--primary"
+    feature_row3:
+      - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
+        alt: "placeholder image 2"
+        title: "Placeholder Image Right Aligned"
+        excerpt: 'This is some sample content that goes here with **Markdown** formatting. Right aligned with `type="right"`'
+        url: "#test-link"
+        btn_label: "Read More"
+        btn_class: "btn--primary"
+    feature_row4:
+      - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
+        alt: "placeholder image 2"
+        title: "Placeholder Image Center Aligned"
+        excerpt: 'This is some sample content that goes here with **Markdown** formatting. Centered with `type="center"`'
+        url: "#test-link"
+        btn_label: "Read More"
+        btn_class: "btn--primary"
 
 
 intro:
@@ -39,3 +63,8 @@ intro:
 ---
 {% include feature_row id="intro" type="center" %}
 {% include feature_row %}
+{% include feature_row id="feature_row2" type="left" %}
+
+{% include feature_row id="feature_row3" type="right" %}
+
+{% include feature_row id="feature_row4" type="center" %}
