--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@ feature_row:
     url: "/escuela-de-tarot/"
     btn_label: "Escuela de Tarot"
     feature_row2:
-      - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
+      - image_path: https://images.unsplash.com/photo-1600430073932-e915854d9d4d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
         alt: "placeholder image 2"
-        title: "Placeholder Image Left Aligned"
-        excerpt: 'This is some sample content that goes here with **Markdown** formatting. Left aligned with `type="left"`'
-        url: "#test-link"
-        btn_label: "Read More"
+        title: "Aprende el significado de las cartas"
+        excerpt: 'Aprende el significado de las cartas del Tarot'
+        url: "/significado-cartas-del-tarot"
+        btn_label: "Comienza ahora"
         btn_class: "btn--primary"
     feature_row3:
       - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
