--- a/index.html
+++ b/index.html
@@ -29,30 +29,30 @@ feature_row:
     excerpt: "Cursos, talleres y seminarios para ayudarte a alcanzar las metas propuestas."
     url: "/escuela-de-tarot/"
     btn_label: "Escuela de Tarot"
-    feature_row2:
-      - image_path: https://images.unsplash.com/photo-1600430073932-e915854d9d4d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
-        alt: "placeholder image 2"
-        title: "Aprende el significado de las cartas"
-        excerpt: 'Aprende el significado de las cartas del Tarot'
-        url: "/significado-cartas-del-tarot"
-        btn_label: "Comienza ahora"
-        btn_class: "btn--primary"
-    feature_row3:
-      - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
-        alt: "placeholder image 2"
-        title: "Placeholder Image Right Aligned"
-        excerpt: 'This is some sample content that goes here with **Markdown** formatting. Right aligned with `type="right"`'
-        url: "#test-link"
-        btn_label: "Read More"
-        btn_class: "btn--primary"
-    feature_row4:
-      - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
-        alt: "placeholder image 2"
-        title: "Placeholder Image Center Aligned"
-        excerpt: 'This is some sample content that goes here with **Markdown** formatting. Centered with `type="center"`'
-        url: "#test-link"
-        btn_label: "Read More"
-        btn_class: "btn--primary"
+  feature_row2:
+    - image_path: https://images.unsplash.com/photo-      1600430073932-e915854d9d4d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
+    alt: "placeholder image 2"
+    title: "Aprende el significado de las cartas"
+    excerpt: 'Aprende el significado de las cartas del Tarot'
+    url: "/significado-cartas-del-tarot"
+    btn_label: "Comienza ahora "
+    btn_class: "btn--primary"
+  feature_row3:
+    - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
+    alt: "placeholder image 2"
+    title: "Placeholder Image Right Aligned"
+    excerpt: 'This is some sample content that goes here with **Markdown** formatting. Right aligned with `type="right"`'
+    url: "#test-link"
+    btn_label: "Read More"
+    btn_class: "btn--primary"
+  feature_row4:
+    - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
+      alt: "placeholder image 2"
+      title: "Placeholder Image Center Aligned"
+      excerpt: 'This is some sample content that goes here with **Markdown** formatting. Centered with `type="center"`'
+      url: "#test-link"
+      btn_label: "Read More"
+      btn_class: "btn--primary"
 
 
 intro:
