--- a/index.html
+++ b/index.html
@@ -1,68 +1,65 @@
 ---
+title: "Círculo Celeste"
 layout: splash
 permalink: /
-title: "Círclo Celeste - Tarot, rituales y seminarios"
-excerpt: 'Soluciones para los problemas espirituales. Tarot terapéutico, rituales para descubrir y mantener tu enfoque. Cursos y seminarios para encontrar tu caminio y progresar en la vida. '
-
 header:
-  overlay_image: https://images.unsplash.com/photo-1600430086946-2d9fc61bbefc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80
-  overlay_filter: rgba(149, 125, 173, 0.8)
-  cta_label: "<i class='fa fa-envelope'></i> Recibe el boletin"
-  cta_url: "https://circuloceleste.substack.com/"
-
+  overlay_color: "#000"
+  overlay_filter: "0.5"
+  overlay_image: /assets/images/unsplash-image-1.jpg
+  actions:
+    - label: "Download"
+      url: "https://github.com/mmistakes/minimal-mistakes/"
+  caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
+excerpt: "Soluciones para los problemas espirituales. Tarot terapéutico, rituales para descubrir y mantener tu enfoque. Cursos y seminarios para encontrar tu caminio y progresar en la vida."
+intro:
+  - excerpt: 'Nullam suscipit et nam, tellus velit pellentesque at malesuada, enim eaque. Quis nulla, netus tempor in diam gravida tincidunt, *proin faucibus* voluptate felis id sollicitudin. Centered with `type="center"`'
 feature_row:
-  - image_path: https://images.unsplash.com/photo-1600429991827-5224817554f8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
-    alt: "customizable"
-    title: "Significado de las cartas"
-    excerpt: "Desarrolla tu talento natural. Descubre el significado de las cartas del Tarot."
-    url: "/significado-de-las-cartas-del-tarot/"
-    btn_label: "Saber más"
-  - image_path: https://images.unsplash.com/photo-1516633886686-2a2ffb459273?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
-    alt: "Cartas de Tarot"
-    title: "Tienda Holistica"
-    excerpt: "Encuentra cartas de Tarot, amuletos y artículos para rituales."
-    url: "/tienda-de-magia/"
-    btn_label: "Tienda de Magia"
-  - image_path: https://images.unsplash.com/photo-1550177977-ad69e8f3cae0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
-    alt: "Asistentes a una clase de Tarot"
-    title: "Cursos y Seminarios"
-    excerpt: "Cursos, talleres y seminarios para ayudarte a alcanzar las metas propuestas."
-    url: "/escuela-de-tarot/"
-    btn_label: "Escuela de Tarot"
-  feature_row2:
-    - image_path: https://images.unsplash.com/photo-      1600430073932-e915854d9d4d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
+  - image_path: assets/images/unsplash-gallery-image-1-th.jpg
+    alt: "placeholder image 1"
+    title: "Placeholder 1"
+    excerpt: "This is some sample content that goes here with **Markdown** formatting."
+  - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
+    image_caption: "Image courtesy of [Unsplash](https://unsplash.com/)"
     alt: "placeholder image 2"
-    title: "Aprende el significado de las cartas"
-    excerpt: 'Aprende el significado de las cartas del Tarot'
-    url: "/significado-cartas-del-tarot"
-    btn_label: "Comienza ahora "
+    title: "Placeholder 2"
+    excerpt: "This is some sample content that goes here with **Markdown** formatting."
+    url: "#test-link"
+    btn_label: "Read More"
     btn_class: "btn--primary"
-  feature_row3:
-    - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
+  - imag
+  - e_path: /assets/images/unsplash-gallery-image-3-th.jpg
+    title: "Placeholder 3"
+    excerpt: "This is some sample content that goes here with **Markdown** formatting."
+feature_row2:
+  - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
+    alt: "placeholder image 2"
+    title: "Placeholder Image Left Aligned"
+    excerpt: 'This is some sample content that goes here with **Markdown** formatting. Left aligned with `type="left"`'
+    url: "#test-link"
+    btn_label: "Read More"
+    btn_class: "btn--primary"
+feature_row3:
+  - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
     alt: "placeholder image 2"
     title: "Placeholder Image Right Aligned"
     excerpt: 'This is some sample content that goes here with **Markdown** formatting. Right aligned with `type="right"`'
     url: "#test-link"
     btn_label: "Read More"
     btn_class: "btn--primary"
-  feature_row4:
-    - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
-      alt: "placeholder image 2"
-      title: "Placeholder Image Center Aligned"
-      excerpt: 'This is some sample content that goes here with **Markdown** formatting. Centered with `type="center"`'
-      url: "#test-link"
-      btn_label: "Read More"
-      btn_class: "btn--primary"
-
-
-intro:
-  - excerpt: 'Tarot para explicar las situaciones, identificar problemas y encontrar respuestas. Creemos que el Tarot puede ayudarte a organizar tus ideas. Usa las cartas como herramienta de autoayuda y una guia para encontrar caminios alternativos.'
-
-
-
+feature_row4:
+  - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
+    alt: "placeholder image 2"
+    title: "Placeholder Image Center Aligned"
+    excerpt: 'This is some sample content that goes here with **Markdown** formatting. Centered with `type="center"`'
+    url: "#test-link"
+    btn_label: "Read More"
+    btn_class: "btn--primary"
 ---
+
 {% include feature_row id="intro" type="center" %}
+
 {% include feature_row %}
+
 {% include feature_row id="feature_row2" type="left" %}
 
 {% include feature_row id="feature_row3" type="right" %}
