--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@ feature_row:
     title: "Placeholder 3"
     excerpt: "This is some sample content that goes here with **Markdown** formatting."
 feature_row2:
-  - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
-    alt: "placeholder image 2"
-    title: "Placeholder Image Left Aligned"
-    excerpt: 'This is some sample content that goes here with **Markdown** formatting. Left aligned with `type="left"`'
-    url: "#test-link"
-    btn_label: "Read More"
+  - image_path: https://images.unsplash.com/photo-1637757935037-a7837f36807d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
+    alt: "Cartas del Tarot"
+    title: "Aprende el significado de las cartas"
+    excerpt: 'Desarrolla tu talento natural. Descubre el significado de las cartas del Tarot.'
+    url: "/significdo-de-las-cartas"
+    btn_label: "Descubre las cartas del Tarot"
     btn_class: "btn--primary"
 feature_row3:
   - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
