--- a/index.html
+++ b/index.html
@@ -14,22 +14,24 @@ excerpt: "Soluciones para los problemas espirituales. Tarot terapéutico, ritual
 intro:
   - excerpt: 'Tarot para explicar las situaciones, identificar problemas y encontrar respuestas. Creemos que el Tarot puede ayudarte a organizar tus ideas. Usa las cartas como herramienta de autoayuda y una guia para encontrar caminios alternativos.'
 feature_row:
-  - image_path: assets/images/unsplash-gallery-image-1-th.jpg
-    alt: "placeholder image 1"
-    title: "Placeholder 1"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
-  - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
-    image_caption: "Image courtesy of [Unsplash](https://unsplash.com/)"
-    alt: "placeholder image 2"
-    title: "Placeholder 2"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
-    url: "#test-link"
-    btn_label: "Read More"
-    btn_class: "btn--primary"
-  - imag
-  - e_path: /assets/images/unsplash-gallery-image-3-th.jpg
-    title: "Placeholder 3"
-    excerpt: "This is some sample content that goes here with **Markdown** formatting."
+- image_path: https://images.unsplash.com/photo-1600429991827-5224817554f8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
+  alt: "customizable"
+  title: "Programa una lectura"
+  excerpt: "Una lectura en línea puede ayudarte a encontrar soluciones a los problemas que esta enfrentando."
+  url: "/servicios/"
+  btn_label: "Saber más"
+- image_path: https://images.unsplash.com/photo-1516633886686-2a2ffb459273?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
+  alt: "Cartas de Tarot"
+  title: "Tienda Holistica"
+  excerpt: "Encuentra cartas de Tarot, amuletos y artículos para rituales."
+  url: "/tienda-de-magia/"
+  btn_label: "Tienda de Magia"
+- image_path: https://images.unsplash.com/photo-1550177977-ad69e8f3cae0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
+  alt: "Asistentes a una clase de Tarot"
+  title: "Cursos Gratis"
+  excerpt: "Aprénde en línea con los cursos cortos gratis.Encuentra la agenda."
+  url: "/webinars/"
+  btn_label: "Cursos Gratis"
 feature_row2:
   - image_path: https://images.unsplash.com/photo-1637757935037-a7837f36807d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
     alt: "Cartas del Tarot"
@@ -39,12 +41,12 @@ feature_row2:
     btn_label: "Descubre las cartas del Tarot"
     btn_class: "btn--primary"
 feature_row3:
-  - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
-    alt: "placeholder image 2"
-    title: "Placeholder Image Right Aligned"
-    excerpt: 'This is some sample content that goes here with **Markdown** formatting. Right aligned with `type="right"`'
-    url: "#test-link"
-    btn_label: "Read More"
+  - image_path: https://images.unsplash.com/photo-1622171132487-51bc94d9153d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
+    alt: "Escuela de Tarot"
+    title: "Escuela Círculo Celeste"
+    excerpt: 'Cultiva tu talento espiritual. Aprénde a leer las cartas del Tarot. '
+    url: "/escuela-de-tarot"
+    btn_label: "Cursos de Tarot"
     btn_class: "btn--primary"
 feature_row4:
   - image_path: /assets/images/unsplash-gallery-image-2-th.jpg
