--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@ title: "Círclo Celeste - Tarot, rituales y seminarios"
 layout: splash
 permalink: /
 header:
-  overlay_color: "#000"
-  overlay_filter: "0.5"
+  overlay_filter: rgba(19, 0, 103, 0.7)
   overlay_image: https://images.unsplash.com/photo-1600430086946-2d9fc61bbefc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80
   actions:
     - label: "Recibe el boletín"
@@ -17,7 +16,7 @@ feature_row:
 - image_path: https://images.unsplash.com/photo-1600429991827-5224817554f8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
   alt: "customizable"
   title: "Programa una lectura"
-  excerpt: "Una lectura en línea puede ayudarte a encontrar soluciones a los problemas que esta enfrentando."
+  excerpt: "Una lectura en línea puede ayudarte a encontrar inspiración y soluciones."
   url: "/servicios/"
   btn_label: "Saber más"
 - image_path: https://images.unsplash.com/photo-1516633886686-2a2ffb459273?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80
